--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -28,12 +28,37 @@
   text-align: -webkit-center;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #e5e5e5;
+}
+
+.footer a {
+  color: #000;
+  text-decoration: none;
+}
+.footer img {
+  width: 1.3em;
+}
+
 /* media queries */
 @media screen and (max-width: 600px) {
-  .centering {
-    margin-top: 5em;
-  }
   .home-card {
     width: 100%;
+  }
+  .errorImage {
+    width: 100%;
+  }
+  .footer {
+    position: relative;
+  }
+  .footer ul {
+    flex-direction: column;
+  }
+  .footer ul li {
+    padding: 0.6em;
   }
 }
